Added potential weightDifferencePower, updated to Java 17