@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.6</version>
+			<version>2.9.0</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -38,12 +38,12 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.10.1</version>
 				<configuration>
-					<release>15</release>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
+					<release>17</release>
+					<!--<compilerArgs>-->
+						<!--<arg>DASHDASHenable-preview</arg>-->
+					<!--</compilerArgs>-->
 				</configuration>
 			</plugin>
 			<plugin>
